--- a/Workout_Tracker/WorkoutPage/workoutpage.html
+++ b/Workout_Tracker/WorkoutPage/workoutpage.html
@@ -70,6 +70,6 @@
     </footer>
 
     
-    <script src="js/script.js"></script>
+    <script src="/WorkoutPage/workoutpage.js"></script>
 </body>
 </html>
